@@ -8,6 +8,8 @@ Bugs fixed
   the full relative path and not the basename.
 * PR#212: Fix traceback with autodoc and ``__init__`` methods without docstring.
 * PR#213: Fix a missing import in the setup command.
+* #1357: Option names documented by :rst:dir:`option` are now again allowed to
+  not start with a dash or slash, and referencing them will work correctly.
 
 Documentation
 -------------
